fix:Fixed the package structure

--- a/appdev/templates/index.html
+++ b/appdev/templates/index.html
@@ -7,7 +7,7 @@
         <form method="post">
             <h1><b>LOGIN PAGE</b></h1>
             Name:<input type="text" name="name"><br>
-            Password:<input type="password" name="Pass"><br>
+            Password:<input type="password" name="password"><br>
             <p><a href="{{url_for('register')}}"><small>Haven't registered yet?</small></a></p><br>
             <button type="submit">Submit</button>
         </form> 
