--- a/appdev/templates/register.html
+++ b/appdev/templates/register.html
@@ -6,8 +6,8 @@
     <body>
         <form method="post">
             <h1><b>REGISTER</b></h1>
-            Username:<input type="text" name="Name"><br>
-            Password:<input type="password" name="Pass"><br>
+            Username:<input type="text" name="name"><br>
+            Password:<input type="password" name="password"><br>
             <button type="submit">Submit</button><br>
         </form>    
         {%if error%}
