--- a/appdev/flaskapp/templates/index.html
+++ b/appdev/flaskapp/templates/index.html
@@ -1,19 +1,26 @@
-<!DOCTYPE html>
-<html>
-    <head>
-        <title>CHAT JPT</title>
-    </head>
-    <body>
-        <form method="post">
+{% extends "base.html" %}
+{% block content %}
+        <form action='' method="post">
             <h1><b>LOGIN PAGE</b></h1>
-            Name:<input type="text" name="name"><br>
-            Password:<input type="password" name="password"><br>
-            <p><a href="{{url_for('register')}}"><small>Haven't registered yet?</small></a></p><br>
-            <button type="submit">Submit</button>
+            {{form.hidden_tag()}}
+        <p> {{form.username.label}}{{form.username(size=20)}}<br>
+            {%if form.username.errors%}
+                {%for error in form.username.errors%}
+                    <span style="color:red;">[{{error}}]</span><br>
+            {%endfor%}
+            {%endif%}
+            {{form.password.label}}{{form.password(size=20)}}<br>
+            {%if form.password.errors%}
+                {%for error in form.password.errors%}
+                    <span style="color:red;">[{{error}}]</span>
+            {%endfor%}
+            {%endif%}<br>
+            {{form.submit()}}
+        </p>
+         <p>Already have an account? <a href="{{url_for('register')}}">Register here</a></p>
         </form> 
+       
         {%if error%}
             <p style="color:red;">{{error}}</p>
         {% endif %}
-                
-    </body>
-</html>
+{% endblock %}
