--- a/appdev/flaskapp/templates/home.html
+++ b/appdev/flaskapp/templates/home.html
@@ -11,25 +11,25 @@
 
 <h2 class="section-header">All Posts</h2>
 
-{% for posts in posts %}
+{% for post in posts %}
 <div class="post-card">
     <div class="post-header">
-        <img src="{{ url_for('static', filename='pics/' + posts.author.image_file) }}" alt="{{ posts.author.username }}'s profile picture">
+        <img src="{{ url_for('static', filename='pics/' + post.author.image_file) }}" alt="{{ post.author.username }}'s profile picture">
         <div>
-            <p class="post-author">{{ posts.author.username }}</p>
-            <h6>{{ posts.date_posted.strftime('%d %b %Y') }}</h6>
+            <p class="post-author">{{ post.author.username }}</p>
+            <h6>{{ post.date_posted.strftime('%d %b %Y') }}</h6>
         </div>
     </div>
     
-    <h2>{{ posts.title }}</h2>
+    <h2>{{ post.title }}</h2>
     <div class="post-content">
-        <p>{{ posts.content }}</p>
+        <p>{{ post.content }}</p>
     </div>
     
-    {% if current_user == posts.author %}
+    {% if current_user == post.author %}
     <div class="post-actions">
-        <a href="{{ url_for('update_post', post_id=posts.id) }}">Update</a>
-        <form action="{{ url_for('delete_post', post_id=posts.id) }}" method="post" style="margin: 0; padding: 0; box-shadow: none;">
+        <a href="{{ url_for('update_post', post_id=post.id) }}">Update</a>
+        <form action="{{ url_for('delete_post', post_id=post.id) }}" method="post" style="margin: 0; padding: 0; box-shadow: none;">
             <button type="submit"> Delete</button>
         </form>
     </div>
