--- a/appdev/flaskapp/templates/account.html
+++ b/appdev/flaskapp/templates/account.html
@@ -12,8 +12,8 @@
     </div>
     
     <div class="account-actions">
-        <a href="{{ url_for('update_account') }}">✏️ Update Account</a>
-        <a href="{{ url_for('logout') }}">🚪 Logout</a>
+        <a href="{{ url_for('logout') }}"> Logout</a>
+        <a href="{{ url_for('update_account') }}"> Update Account</a>
     </div>
 </div>
 
