--- a/appdev/flaskapp/templates/base.html
+++ b/appdev/flaskapp/templates/base.html
@@ -16,7 +16,15 @@
             <a href="{{ url_for('register') }}">Register</a>
         {% endif %}
     </header>
-
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+            {% for category, message in messages %}
+                <div class="flash-message {{ category }}">
+                    {{ message }}
+                </div>
+            {% endfor %}
+        {% endif %}
+    {% endwith %}
     <div class="container">
         {% block content %}
         {% endblock %}
