--- a/appdev/flaskapp/templates/index.html
+++ b/appdev/flaskapp/templates/index.html
@@ -35,14 +35,15 @@
     </div>
     
     <p style="text-align: center; margin-top: 1.5rem;">
-        Don't have an account? <a href="{{ url_for('register') }}">Register here</a>
+    Don't have an account? <a href="{{ url_for('register') }}">Register here</a><br>
+    Forgot password? <a href="{{ url_for('request_reset') }}">Reset here</a>
     </p>
-</form>
+
 
 {% if error %}
     <div class="card" style="background: #fee; border-left: 4px solid var(--error-red); margin-top: 1rem;">
         <p class="error-message">{{ error }}</p>
     </div>
 {% endif %}
-
+</form>
 {% endblock %}
