fix:used blueprints

--- a/appdev/flaskapp/templates/index.html
+++ b/appdev/flaskapp/templates/index.html
@@ -35,8 +35,8 @@
     </div>
     
     <p style="text-align: center; margin-top: 1.5rem;">
-    Don't have an account? <a href="{{ url_for('register') }}">Register here</a><br>
-    Forgot password? <a href="{{ url_for('request_reset') }}">Reset here</a>
+    Don't have an account? <a href="{{ url_for('users.register') }}">Register here</a><br>
+    Forgot password? <a href="{{ url_for('users.request_reset') }}">Reset here</a>
     </p>
 
 
