--- a/appdev/flaskapp/templates/register.html
+++ b/appdev/flaskapp/templates/register.html
@@ -45,7 +45,7 @@
     </div>
     
     <p style="text-align: center; margin-top: 1.5rem;">
-        Already have an account? <a href="{{ url_for('login') }}">Login here</a>
+        Already have an account? <a href="{{ url_for('users.login') }}">Login here</a>
     </p>
 </form>
 
