--- a/appdev/flaskapp/templates/base.html
+++ b/appdev/flaskapp/templates/base.html
@@ -8,12 +8,12 @@
 </head>
 <body>
     <header>
-        <a href="{{ url_for('home') }}">Home</a>
+        <a href="{{ url_for('main.home') }}">Home</a>
         {% if current_user.is_authenticated %}
-            <a href="{{ url_for('account') }}">Account</a>
+            <a href="{{ url_for('users.account') }}">Account</a>
         {% else %}
-            <a href="{{ url_for('login') }}">Login</a>
-            <a href="{{ url_for('register') }}">Register</a>
+            <a href="{{ url_for('users.login') }}">Login</a>
+            <a href="{{ url_for('users.register') }}">Register</a>
         {% endif %}
     </header>
     {% with messages = get_flashed_messages(with_categories=true) %}
